# transform-gizmo

./: Cargo.toml
crates/transform-gizmo-bevy/: Cargo.toml
crates/transform-gizmo-bevy/src/: lib.rs  render.rs
crates/transform-gizmo/src/: math.rs  shape.rs
examples/bevy/: Cargo.toml
examples/bevy/src/: gui.rs  picking.rs
examples/egui/src/: main.rs
