[package]
name = "bevy-example"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
transform-gizmo-bevy.workspace = true

bevy.workspace = true
bevy_infinite_grid = { git = "https://github.com/varphone/bevy_infinite_grid.git", rev = "e00d21b" }
bevy_mod_outline = { git = "https://github.com/varphone/bevy_mod_outline.git", rev = "d6fb282" }

[dependencies.bevy_egui]
version = "0.38"
features = ["open_url", "default_fonts", "render"]
default-features = false

[lints]
workspace = true
